--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity_Memo" >
+    tools:context=".MainActivity_Memo"
+    android:background="@color/colorYellow" >
 
     <Button
         android:id="@+id/button_load"
@@ -17,6 +18,7 @@
         android:layout_marginBottom="13dp"
         android:text="📤"
         android:textSize="25dp"
+        android:background="@drawable/roundbutton_text"
         app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,6 +32,7 @@
         android:layout_marginLeft="4dp"
         android:text="🗑"
         android:textSize="25dp"
+        android:background="@drawable/roundbutton_text"
         app:layout_constraintBaseline_toBaselineOf="@+id/button_save"
         app:layout_constraintStart_toEndOf="@+id/button_save" />
 
@@ -43,6 +46,7 @@
         android:layout_marginBottom="13dp"
         android:text="📥"
         android:textSize="25dp"
+        android:background="@drawable/roundbutton_text"
         app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintStart_toEndOf="@+id/button_load"
         app:layout_constraintTop_toTopOf="parent" />
@@ -52,12 +56,13 @@
         android:layout_width="350dp"
         android:layout_height="400dp"
         android:ems="10"
-        android:gravity="top"
+        android:gravity="center"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_load" />
+        app:layout_constraintTop_toBottomOf="@+id/button_load"
+        android:background="@drawable/roundbutton_text" />
 
     <TextView
         android:id="@+id/textView"
