간단한 메모장 앱 <기능> 1. 메모 입력 2. 메모 로드 기능 3. 메모 저장 기능 4. 메모 삭제 기능 5. 시간 출력 기능 <메모장 디자인> - 색상 - 라운드 모양 <메모장 한글 버전> - 한글 모드시 "메모장" <메모장 아이콘> #메모장 아이콘 및 디자인 변경

--- a/app/src/main/res/drawable/roundbutton_text.xml
+++ b/app/src/main/res/drawable/roundbutton_text.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:Android="http://schemas.android.com/apk/res/android"
     Android:shape="rectangle">
-    <solid Android:color="#eeffffff" />
+    <solid Android:color="@color/colorYellow" />
     <corners Android:bottomRightRadius="50dp"
         Android:bottomLeftRadius="50dp"
         Android:topRightRadius="50dp"
