--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity_Memo"
-    android:background="@color/colorYellow" >
+    android:background="@color/colorRed" >
 
     <Button
         android:id="@+id/button_load"
@@ -18,7 +18,7 @@
         android:layout_marginBottom="13dp"
         android:text="📤"
         android:textSize="25dp"
-        android:background="@drawable/roundbutton_text"
+        android:background="@drawable/roundbutton"
         app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -32,7 +32,7 @@
         android:layout_marginLeft="4dp"
         android:text="🗑"
         android:textSize="25dp"
-        android:background="@drawable/roundbutton_text"
+        android:background="@drawable/roundbutton"
         app:layout_constraintBaseline_toBaselineOf="@+id/button_save"
         app:layout_constraintStart_toEndOf="@+id/button_save" />
 
@@ -46,7 +46,7 @@
         android:layout_marginBottom="13dp"
         android:text="📥"
         android:textSize="25dp"
-        android:background="@drawable/roundbutton_text"
+        android:background="@drawable/roundbutton"
         app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintStart_toEndOf="@+id/button_load"
         app:layout_constraintTop_toTopOf="parent" />
