--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="colorYellow">#F0FFF0</color>
+    <color name="colorGreen">#F0FFF0</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorYellow">#FFEBCD</color>
+    <color name="colorRed">#FF6347</color>
 </resources>
