간단한 메모장 앱 <기능> 1. 메모 입력 2. 메모 로드 기능 3. 메모 저장 기능 4. 메모 삭제 기능 5. 시간 출력 기능 <메모장 디자인> - 색상 - 라운드 모양 <메모장 한글 버전> - 한글 모드시 "메모장" <메모장 아이콘> #<메모장 이름> - 메모장 이름 "지수의 메모장" 추가 #<메모장 폰트> - 메모장 폰트 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,7 @@
         android:ems="10"
         android:gravity="center"
         android:inputType="textMultiLine"
+        android:fontFamily="@font/typo_ssangmundongb"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,6 +76,17 @@
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="@+id/editText" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="지수의 메모장"
+        android:fontFamily="@font/typo_ssangmundongb"
+        android:textSize="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_save"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
